--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -8,6 +8,7 @@
       <% if(messages.error) { %>
       <span class="text-red-500 text-sm"><%= messages.error %></span>
       <% } %>
+      <input id="source" type="hidden" name="source" value="site" />
       <div class="mb-4">
         <label
           class="block text-gray-700 text-sm font-bold mb-2"
@@ -27,8 +28,7 @@
             px-3
             text-gray-700
             leading-tight
-            focus:outline-none
-            focus:shadow-outline
+            focus:outline-none focus:shadow-outline
           "
           id="email"
           type="email"
@@ -56,8 +56,7 @@
             text-gray-700
             mb-3
             leading-tight
-            focus:outline-none
-            focus:shadow-outline
+            focus:outline-none focus:shadow-outline
           "
           id="password"
           type="password"
@@ -75,8 +74,7 @@
             py-2
             px-4
             rounded
-            focus:outline-none
-            focus:shadow-outline
+            focus:outline-none focus:shadow-outline
           "
           type="submit"
         >
