--- a/resources/views/customers/orders.ejs
+++ b/resources/views/customers/orders.ejs
@@ -34,11 +34,11 @@
         <tr>
           <td class="border px-4 py-2">
             <a class="link" href="/customer/orders/<%= order._id %>"
-              ><%= order._id %></a
+              >#<%= order.orderNumber %></a
             >
           </td>
           <td class="border px-4 py-2"><%= order.phone%></td>
-          <td class="border px-4 py-2"><%= order.address.street +", "+order.address.houseNumber +", "+order.address.district+", "+order.address.city%></td> %></td>
+          <td class="border px-4 py-2"><%= order.deliveryAddress.street +", "+order.deliveryAddress.houseNumber +", "+order.deliveryAddress.district+", "+order.deliveryAddress.city%></td> %></td>
           <td class="border px-4 py-2">
             <%= moment(order.createdAt).format('DD/MM/YYYY - HH:mm')%>
           </td>
