--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -1,116 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Green Food</title>
-    <script
-      src="https://kit.fontawesome.com/ecb358af67.js"
-      crossorigin="anonymous"
-    ></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Green Food</title>
+		<script
+			src="https://kit.fontawesome.com/ecb358af67.js"
+			crossorigin="anonymous"
+		></script>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/css/app.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-  </head>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+		/>
+		<link rel="stylesheet" href="/css/app.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+	</head>
 
-  <body>
-    <nav class="container mx-auto flex items-center justify-between py-4">
-      <div>
-        <a href="/"
-          ><img width="100" height="100" src="/img/logo.png" alt="logo"
-        /></a>
-      </div>
-      <div>
-        <% if (user) { %>
-        <span id="" class=""
-          >Bem Vindo, <strong><%= user.username %></strong> !</span
-        >
-        <%}%>
-      </div>
-      <div>
-        <ul class="flex items-center">
-          <% if (user) { %> <% if (user.role == 'admin') { %>
-          <li class="ml-6"><a href="/">Menu</a></li>
-          <li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
-          <li class="ml-6"><a href="/admin/clients">Clientes</a></li>
-          <li class="ml-6"><a href="/admin/products">Produtos</a></li>
-          <li class="ml-6">
-            <form id="logout" action="/logout" method="POST">
-              <a onclick="document.getElementById('logout').submit()" href="#"
-                >Sair</a
-              >
-            </form>
-          </li>
-          <%}%> <% if (user.role == 'customer') { %>
+	<body>
+		<nav class="container mx-auto flex items-center justify-between py-4">
+			<div>
+				<a href="/"
+					><img width="100" height="100" src="/img/logo.png" alt="logo"
+				/></a>
+			</div>
+			<div>
+				<% if (user) { %>
+				<span id="" class=""
+					>Bem Vindo, <strong><%= user.username %></strong> !</span
+				>
+				<%}%>
+			</div>
+			<div>
+				<ul class="flex items-center">
+					<% if (user) { %> <% if (user.role == 'admin') { %>
+					<li class="ml-6"><a href="/">Menu</a></li>
+					<li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
+					<li class="ml-6"><a href="/admin/clients">Clientes</a></li>
+					<li class="ml-6"><a href="/admin/products">Produtos</a></li>
+					<li class="ml-6">
+						<form id="logout" action="/logout" method="POST">
+							<a onclick="document.getElementById('logout').submit()" href="#"
+								>Sair</a
+							>
+						</form>
+					</li>
+					<%}%> <% if (user.role == 'customer') { %>
 
-          <li class="ml-6"><a href="/">Menu</a></li>
-          <li class="ml-6"><a href="#">Ofertas</a></li>
-          <li class="ml-6"><a href="/customer/orders">Meus Pedidos</a></li>
-          <li class="ml-6">
-            <form id="logout" action="/logout" method="POST">
-              <a onclick="document.getElementById('logout').submit()" href="#"
-                >Sair</a
-              >
-            </form>
-          </li>
-          <%}%> <%}else{ %>
-          <li class="ml-6"><a href="/">Menu</a></li>
-          <li class="ml-6"><a href="#">Ofertas</a></li>
-          <li class="ml-6"><a href="/register">Registrar</a></li>
-          <li class="ml-6"><a href="/login">Entrar</a></li>
-          <%} %>
-          <li class="ml-6">
-            <a
-              href="/cart"
-              class="inline-block px-4 py-2 rounded-full flex items-center"
-            >
-              <span id="cartCounter" class="text-white font-bold pr-2"
-                ><%= session.cart ? session.cart.totalQty: '' %></span
-              >
-              <img src="/img/cart.png" alt=""
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+					<li class="ml-6"><a href="/">Menu</a></li>
+					<li class="ml-6"><a href="#">Ofertas</a></li>
+					<li class="ml-6"><a href="/customer/orders">Meus Pedidos</a></li>
+					<li class="ml-6">
+						<form id="logout" action="/logout" method="POST">
+							<a onclick="document.getElementById('logout').submit()" href="#"
+								>Sair</a
+							>
+						</form>
+					</li>
+					<%}%> <%}else{ %>
+					<li class="ml-6"><a href="/">Menu</a></li>
+					<li class="ml-6"><a href="#">Ofertas</a></li>
+					<li class="ml-6"><a href="/register">Registrar</a></li>
+					<li class="ml-6"><a href="/login">Entrar</a></li>
+					<%} %>
+					<li class="ml-6">
+						<a
+							href="/cart"
+							class="inline-block px-4 py-2 rounded-full flex items-center"
+						>
+							<span id="cartCounter" class="text-white font-bold pr-2"
+								><%= session.cart && session.cart.items.length ?
+								session.cart.items.length: '' %></span
+							>
+							<img src="/img/cart.png" alt=""
+						/></a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-    <%- body %>
-    <footer></footer>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/searchzipcode.js"></script>
-    <script src="/js/searchUser.js"></script>
-    <script src="/js/searchProduct.js"></script>
-    <script src="/js/hideElements.js"></script>
-    <script src="/js/validate.js"></script>
-    <script>
-      $(document).ready(function () {
-        $('.date').mask('11/11/1111');
-        $('.time').mask('00:00:00');
-        $('.date_time').mask('00/00/0000 00:00:00');
-        $('.cep').mask('00000-000');
-        $('.phone').mask('0000-0000');
-        $('.phone_with_ddd').mask('(00) 0000-0000');
-        $('.phone_us').mask('(000) 000-0000');
-        $('.mixed').mask('AAA 000-S0S');
-        $('.cpf').mask('000.000.000-00', { reverse: true });
-        $('.money').mask('000.000.000.000.000,00', { reverse: true });
-      });
-    </script>
-    <!-- <script src="../js/validate.js"></script> -->
-  </body>
+		<%- body %>
+		<footer></footer>
+		<script src="/socket.io/socket.io.js"></script>
+		<script src="/js/app.js"></script>
+		<script src="/js/searchzipcode.js"></script>
+		<script src="/js/searchUser.js"></script>
+		<script src="/js/searchProduct.js"></script>
+		<script src="/js/hideElements.js"></script>
+		<script src="/js/validate.js"></script>
+		<script>
+			$(document).ready(function () {
+				$('.date').mask('11/11/1111')
+				$('.time').mask('00:00:00')
+				$('.date_time').mask('00/00/0000 00:00:00')
+				$('.cep').mask('00000-000')
+				$('.phone').mask('0000-0000')
+				$('.phone_with_ddd').mask('(00) 0000-0000')
+				$('.phone_us').mask('(000) 000-0000')
+				$('.mixed').mask('AAA 000-S0S')
+				$('.cpf').mask('000.000.000-00', { reverse: true })
+				$('.money').mask('000.000.000.000.000,00', { reverse: true })
+			})
+		</script>
+		<!-- <script src="../js/validate.js"></script> -->
+	</body>
 </html>
