--- a/resources/views/customers/singleOrder.ejs
+++ b/resources/views/customers/singleOrder.ejs
@@ -27,7 +27,7 @@
 				</li>
 				<li
 					class="status_line text-sm md:text-xl pb-16"
-					data-status="preparation"
+					data-status="in_progress"
 				>
 					<span>Em Preparação</span>
 				</li>
