--- a/resources/views/admin/clientForm.ejs
+++ b/resources/views/admin/clientForm.ejs
@@ -1,162 +1,176 @@
 <form name="handleClientForm" id="handleClientForm">
-  <input id="id" name="id" value="" style="display: none" />
-  <div class="firstline">
-    <div class="form-control">
-      <label for="username">Nome:</label>
-      <input
-        id="username"
-        name="username"
-        class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        value=""
-        placeholder="Nome do Cliente"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-    <div class="form-control">
-      <label for="phone">Telefone:</label>
-      <input
-        id="phone"
-        type="text"
-        value=""
-        name="phone"
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        placeholder="Telefone"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-  </div>
-  <div class="secondline">
-    <div class="form-control">
-      <label for="zipcode">Cep:</label>
-      <input
-        id="zipcode"
-        type="text"
-        value=""
-        name="zipcode"
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        placeholder="Cep"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
+	<input id="id" name="id" value="" style="display: none" />
+	<div class="firstline">
+		<div class="form-control">
+			<label for="firstName">Nome:</label>
+			<input
+				id="firstName"
+				name="firstName"
+				class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				value=""
+				placeholder="Nome do Cliente"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+		<div class="form-control">
+			<label for="lastName">Sobrenome:</label>
+			<input
+				id="lastName"
+				name="lastName"
+				class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				value=""
+				placeholder="Sobrenome do Cliente"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+		<div class="form-control">
+			<label for="phone">Telefone:</label>
+			<input
+				id="phone"
+				type="text"
+				value=""
+				name="phone"
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				placeholder="Telefone"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+	</div>
+	<div class="secondline">
+		<div class="form-control">
+			<label for="zipcode">Cep:</label>
+			<input
+				id="zipcode"
+				type="text"
+				value=""
+				name="zipcode"
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				placeholder="Cep"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
 
-    <button
-      class="btn-primary rounded-full text-white font-bold"
-      id="searchzipcodebtn"
-      name="searchzipcodebtn"
-      type="button"
-    >
-      Buscar Cep
-    </button>
-    <a href="descobrir-cep">Nao sei meu Cep</a>
-  </div>
-  <div class="thirdline">
-    <div class="form-control">
-      <label for="street">Rua:</label>
-      <input
-        id="street"
-        name="street"
-        class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        value=""
-        placeholder="Rua"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-    <div class="form-control">
-      <label for="houseNumber">Número:</label>
-      <input
-        id="houseNumber"
-        name="houseNumber"
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        type="number"
-        value=""
-        placeholder="Num"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-  </div>
-  <div class="fourthline">
-    <div class="form-control">
-      <label for="district">Bairro:</label>
-      <input
-        id="district"
-        name="district"
-        value=""
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        placeholder="Bairro"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-    <div class="form-control">
-      <label for="city">Cidade:</label>
-      <input
-        id="city"
-        name="city"
-        value=""
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        placeholder="Cidade"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-    <div class="form-control">
-      <label for="state">Estado:</label>
-      <input
-        id="state"
-        name="state"
-        value=""
-        class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-        type="text"
-        placeholder="Estado"
-      />
-      <i class="fas fa-check-circle"></i>
-      <i class="fas fa-exclamation-circle"></i>
-      <small></small>
-    </div>
-  </div>
-  <div class="form-control">
-    <label for="reference">Ponto de referência:</label>
-    <input
-      id="reference"
-      name="reference"
-      value=""
-      class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
-      type="text"
-      placeholder="Ponto de referencia"
-    />
-    <i class="fas fa-check-circle"></i>
-    <i class="fas fa-exclamation-circle"></i>
-    <small></small>
-  </div>
+		<button
+			class="btn-primary rounded-full text-white font-bold"
+			id="searchzipcodebtn"
+			name="searchzipcodebtn"
+			type="button"
+		>
+			Buscar Cep
+		</button>
+		<a href="descobrir-cep">Nao sei meu Cep</a>
+	</div>
+	<div class="thirdline">
+		<div class="form-control">
+			<label for="street">Rua:</label>
+			<input
+				id="street"
+				name="street"
+				class="border pl-6 mr-10 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				value=""
+				placeholder="Rua"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+		<div class="form-control">
+			<label for="houseNumber">Número:</label>
+			<input
+				id="houseNumber"
+				name="houseNumber"
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				type="number"
+				value=""
+				placeholder="Num"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+	</div>
+	<div class="fourthline">
+		<div class="form-control">
+			<label for="district">Bairro:</label>
+			<input
+				id="district"
+				name="district"
+				value=""
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				placeholder="Bairro"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+		<div class="form-control">
+			<label for="city">Cidade:</label>
+			<input
+				id="city"
+				name="city"
+				value=""
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				placeholder="Cidade"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+		<div class="form-control">
+			<label for="state">Estado:</label>
+			<input
+				id="state"
+				name="state"
+				value=""
+				class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+				type="text"
+				placeholder="Estado"
+			/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small></small>
+		</div>
+	</div>
+	<div class="form-control">
+		<label for="reference">Ponto de referência:</label>
+		<input
+			id="reference"
+			name="reference"
+			value=""
+			class="border pl-6 px-4 py-2 border-gray-400 rounded-md"
+			type="text"
+			placeholder="Ponto de referencia"
+		/>
+		<i class="fas fa-check-circle"></i>
+		<i class="fas fa-exclamation-circle"></i>
+		<small></small>
+	</div>
 
-  <h2
-    id="small-message"
-    name="small-message"
-    class="small-message text-md font-bold mb-4"
-  ></h2>
+	<h2
+		id="small-message"
+		name="small-message"
+		class="small-message text-md font-bold mb-4"
+	></h2>
 
-  <button
-    id="saveClientBtn"
-    class="btn-primary rounded-full px-4 py-2 mx-4 text-white font-bold"
-  >
-    Salvar
-  </button>
-  <button type="button" class="client-modal-close">Fechar</button>
+	<button
+		id="saveClientBtn"
+		class="btn-primary rounded-full px-4 py-2 mx-4 text-white font-bold"
+	>
+		Salvar
+	</button>
+	<button type="button" class="client-modal-close">Fechar</button>
 </form>
