--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,99 +1,84 @@
 <section class="hero py-16">
-  <div class="container mx-auto flex items-center justify-between">
-    <div class="w-1/2">
-      <h6 class="text-lg"><em>Sua Feira sem sair de casa.</em></h6>
-      <h1 class="text-6xl font-bold">Tá esperando o quê?</h1>
-      <button
-        class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary"
-      >
-        Peça Agora
-      </button>
-    </div>
-    <div class="w-1/3"><img src="/img/logo-green-food.png" alt="" /></div>
-  </div>
+	<div class="container mx-auto flex items-center justify-between">
+		<div class="w-1/2">
+			<h6 class="text-lg"><em>Sua Feira sem sair de casa.</em></h6>
+			<h1 class="text-6xl font-bold">Tá esperando o quê?</h1>
+			<button
+				class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary"
+			>
+				Peça Agora
+			</button>
+		</div>
+		<div class="w-1/3"><img src="/img/logo-green-food.png" alt="" /></div>
+	</div>
 </section>
 <section id="container" class="menu container mx-auto py-8">
-  <h1 class="text-xl font-bold mb-8">
-    Todos os Itens <% categories.forEach(function (category){%>
-    <button
-      id="<%= category %>"
-      type="button"
-      class="categories size py-1 px-4 rounded-full text-xs"
-    >
-      <%= category %>
-    </button>
-    <% })%>
-  </h1>
-  <div
-    class="
-      grid grid-cols-1
-      md:grid-cols-2
-      lg:grid-cols-3
-      xl:grid-cols-4
-      col-gap-12
-      row-gap-16
-    "
-  >
-    <% products.forEach(function (product){%>
-    <div class="w-full md:w-64">
-      <img class="h-40 mb-4 mx-auto" src="<%= product.image %>" alt="" />
-      <div class="text-center">
-        <h2 class="mb-4 text-lg"><%= product.name %></h2>
-        <div class="flex flex-row justify-evenly">
-          <% product.saleUnits.forEach(function (saleUnit) { if (saleUnit.active
-          == true) {%>
-          <div class="flex flex-col">
-            <span class="font-bold text-lg"
-              ><%= saleUnit.price.toLocaleString('pt-BR', { style: 'currency',
-              currency: 'BRL' }) %></span
-            >
-            <button
-              type="button"
-              data-product="<%= JSON.stringify(product)%>"
-              data-saleUnit="<%= JSON.stringify(saleUnit)%>"
-              class="size py-1 px-4 rounded-full text-xs mt-4"
-            >
-              <%= saleUnit.saleUnit %>
-            </button>
-          </div>
-          <% }})%>
-        </div>
+	<h1 class="text-xl font-bold mb-8">
+		Todos os Itens <% categories.forEach(function (category){%>
+		<button
+			id="<%= category %>"
+			type="button"
+			class="categories size py-1 px-4 rounded-full text-xs"
+		>
+			<%= category %>
+		</button>
+		<% })%>
+	</h1>
+	<div
+		class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16"
+	>
+		<% products.forEach(function (product){%>
+		<div class="w-full md:w-64">
+			<img class="h-40 mb-4 mx-auto" src="<%= product.image %>" alt="" />
+			<div class="text-center">
+				<h2 class="mb-4 text-lg"><%= product.name %></h2>
+				<div class="flex flex-row justify-evenly">
+					<% product.saleUnits.forEach(function (saleUnit) { if (saleUnit.active
+					== true) {%>
+					<div class="flex flex-col">
+						<span class="font-bold text-lg"
+							><%= saleUnit.price.toLocaleString('pt-BR', { style: 'currency',
+							currency: 'BRL' }) %></span
+						>
+						<button
+							type="button"
+							data-product="<%= JSON.stringify(product)%>"
+							data-saleUnit="<%= JSON.stringify(saleUnit)%>"
+							class="size py-1 px-4 rounded-full text-xs mt-4"
+						>
+							<%= saleUnit.saleUnit %>
+						</button>
+					</div>
+					<% }})%>
+				</div>
 
-        <input
-          type="number"
-          id="itemQuantity<%= product.id %>"
-          min="0"
-          data-product="<%= JSON.stringify(product)
+				<input
+					type="number"
+					id="itemQuantity<%= product._id %>"
+					min="0"
+					data-product="<%= JSON.stringify(product)
           %>"
-          placeholder="Quantidade"
-          class="
-            itemQuantity
-            flex
-            border-b border-gray-500
-            mt-4
-            w-24
-            m-auto
-            text-center
-          "
-        />
-        <span class="mt-4">Preço Total:</span>
-        <span id="totalPrice<%= product.id %>" class="totalPrice"
-          ><%= (0.00).toLocaleString('pt-BR', { style: 'currency', currency:
-          'BRL' })%></span
-        >
+					placeholder="Quantidade"
+					class="itemQuantity flex border-b border-gray-500 mt-4 w-24 m-auto text-center"
+				/>
+				<span class="mt-4">Preço Total:</span>
+				<span id="totalPrice<%= product._id %>" class="totalPrice"
+					><%= (0.00).toLocaleString('pt-BR', { style: 'currency', currency:
+					'BRL' })%></span
+				>
 
-        <div class="flex flex-col tems-center justify-around mt-1">
-          <button
-            data-product="<%= JSON.stringify(product)%>"
-            class="add-to-cart py-1 px-6 rounded-full mx-8 my-4 font-bold"
-            id="<%= product.id %>"
-          >
-            <span>+</span>
-            <span class="m-4">Adicionar</span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <% })%>
-  </div>
+				<div class="flex flex-col tems-center justify-around mt-1">
+					<button
+						data-product="<%= JSON.stringify(product)%>"
+						class="add-to-cart py-1 px-6 rounded-full mx-8 my-4 font-bold"
+						id="<%= product._id %>"
+					>
+						<span>+</span>
+						<span class="m-4">Adicionar</span>
+					</button>
+				</div>
+			</div>
+		</div>
+		<% })%>
+	</div>
 </section>
